# Carnap

./: .gitignore  .stylish-haskell.yaml  Makefile  README.md  cabal-ghcjs.project  cabal.project  carnap-lti-canvas.json  client.nix  default.nix  hie.yaml  index.html  release.nix  server.nix  shell.nix  stack-ghcjs.yaml  stack.yaml
Carnap/: Carnap.cabal  Carnap.nix  stack.yaml
Carnap-Client/: Carnap-Client.cabal  Carnap-Client.nix
Carnap-Client/src/Carnap/GHCJS/: SharedFunctions.hs  SharedTypes.hs
Carnap-GHCJS/: Carnap-GHCJS.cabal  Carnap-GHCJS.nix
Carnap-GHCJS/AcceptJSON/: Main.hs
Carnap-GHCJS/AllActions/: Main.hs
Carnap-GHCJS/Proof-Check/: Main.hs
Carnap-GHCJS/Syntax-Check/: Main.hs
Carnap-GHCJS/Translate/: Main.hs
Carnap-GHCJS/TruthTable/: Main.hs
Carnap-GHCJS/src/: Lib.hs  ProofCheckBox.hs
Carnap-GHCJS/src/Carnap/GHCJS/: SharedFunctions.hs  SharedTypes.hs
Carnap-GHCJS/src/Carnap/GHCJS/Action/: AcceptJSON.hs  CounterModel.hs  ProofCheck.hs  QualitativeProblem.hs  RenderFormulas.hs  SequentCheck.hs  SyntaxCheck.hs  Translate.hs  TreeDeductionCheck.hs  TruthTable.hs
Carnap-GHCJS/src/Carnap/GHCJS/Util/: ProofJS.hs
Carnap-GHCJS/src/Carnap/GHCJS/Widget/: ProofCheckBox.hs  RenderDeduction.hs
Carnap-GHCJS/src/Lib/: FormulaTests.hs
Carnap-GHCJS/test/: Proof-Check.html  Syntax-Check.html  TruthTable.html
Carnap-Server/: .ghci  Application.hs  Carnap-Server.cabal  Carnap-Server.nix  Foundation.hs  Import.hs  Model.hs  Settings.hs
Carnap-Server/Filter/: Anchors.hs  CounterModelers.hs  Diagrams.hs  ProofCheckers.hs  Qualitative.hs  Randomize.hs  RenderFormulas.hs  Sequent.hs  Sidenotes.hs  SynCheckers.hs  Translate.hs  TreeDeduction.hs  TruthTables.hs  TruthTrees.hs  Util.hs
Carnap-Server/Handler/: Admin.hs  Assignment.hs  Book.hs  Chapter.hs  Command.hs  Common.hs  Document.hs  Fay.hs  Hashed.hs  Home.hs  Info.hs  Instructor.hs  Instuctor.hs  Register.hs  Review.hs  Rule.hs  Serve.hs  User.hs
Carnap-Server/Handler/API/: API.hs  AesonHelper.hs  Instructor.hs
Carnap-Server/Handler/API/Instructor/: Assignments.hs  Courses.hs  Documents.hs  Students.hs  Types.hs
Carnap-Server/Import/: NoFoundation.hs
Carnap-Server/Settings/: Runtime.hs  RuntimeDefs.hs  StaticFiles.hs
Carnap-Server/Util/: API.hs  Assignment.hs  Data.hs  Database.hs  Grades.hs  Handler.hs  LTI.hs  Sql.hs
Carnap-Server/app/: devel.hs
Carnap-Server/book/: appendix_Practice Problems_13.pandoc  chapter1.pandoc  chapter10.pandoc  chapter11.pandoc  chapter12.pandoc  chapter2.pandoc  chapter3.pandoc  chapter4.pandoc  chapter5.pandoc  chapter6.pandoc  chapter7.pandoc  chapter8.pandoc  chapter9.pandoc
Carnap-Server/config/: keter.yml  models  robots.txt  routes  settings-example.yml  settings.yml  test-settings.yml
Carnap-Server/fay/: Comment.hs  FFIExample.hs  Home.hs
Carnap-Server/fay-shared/: SharedTypes.hs
Carnap-Server/fay-shared/Fay/: SharedTypes.hs
Carnap-Server/messages/: en.msg  pt-BR.msg  tr.msg
Carnap-Server/static/: faygen-omEJ2n4J.js
Carnap-Server/static/css/: bootstrapextra.css  examplelists.css  exercises.css  proof.css  tree.css  tufte.css  tuftextra.css
Carnap-Server/static/ghcjs/: rts.js
Carnap-Server/static/ghcjs/allactions/: lib.js  out.js  runmain.js
Carnap-Server/static/ghcjs/syncheck/: lib.js  out.js  runmain.js
Carnap-Server/static/ghcjs/translate/: lib.js  out.js  runmain.js
Carnap-Server/static/js/: columnSort.js  proof.js  tagsinput.js
Carnap-Server/static/klement/: proofs.css  proofs.js  syntax.js
Carnap-Server/static/truth-tree/: lib.css  lib.css.map  lib.js  lib.js.map
Carnap-Server/templates/: admin.julius  assignment-state.julius  auth-layout.cassius  auth-layout.hamlet  carnap-book.hamlet  command.julius  createTrees.julius  custom-layout-wrapper.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  document.cassius  document.hamlet  documentIndex.cassius  documentIndex.hamlet  homepage.cassius  homepage.hamlet  homepage.julius  homepage.lucius  infopage.cassius  infopage.hamlet  infopage.julius  instructor.cassius  instructor.hamlet  instructor.julius  passwordEntry.hamlet  register.hamlet  review.cassius  review.hamlet  review.julius  status-warning.julius  user.cassius  user.hamlet  user.julius
Carnap-Server/test/: TestImport.hs
Carnap/src/Carnap/: Bad.hs  Good.hs
Carnap/src/Carnap/Calculi/: Util.hs
Carnap/src/Carnap/Calculi/NaturalDeduction/: Checker.hs  Parser.hs  Syntax.hs  Util.hs
Carnap/src/Carnap/Calculi/NaturalDeduction/Parser/: Fitch.hs  Hardegree.hs  Hilbert.hs  Lemmon.hs  (+3 more)
Carnap/src/Carnap/Calculi/Tableau/: Checker.hs  Data.hs
Carnap/src/Carnap/Core/: Util.hs
Carnap/src/Carnap/Core/Data/: AbstractSyntaxClasses.hs  AbstractSyntaxDataTypes.hs  Classes.hs  Optics.hs  Types.hs  Util.hs
Carnap/src/Carnap/Core/Examples/: ACUI.hs  ToyLanguages.hs
Carnap/src/Carnap/Core/ModelChecking/: ModelFinder.hs  Parser.hs  SAT.hs
Carnap/src/Carnap/Core/Test/: ToyLanguages.hs
Carnap/src/Carnap/Core/Unification/: ACUI.hs  AU.hs  Combination.hs  FirstOrder.hs  Huet.hs  ModelFinder.hs  SAT.hs  Unification.hs
Carnap/src/Carnap/Languages/Arithmetic/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/ClassicalSequent/: Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/DefiniteDescription/: Parser.hs  Semantics.hs  Syntax.hs  Util.hs
Carnap/src/Carnap/Languages/HigherOrderArithmetic/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/ModalFirstOrder/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/ModalPropositional/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/PureFirstOrder/: Algorithms.hs  Logic.hs  Parser.hs  Semantics.hs  Syntax.hs  Util.hs
Carnap/src/Carnap/Languages/PurePropositional/: Logic.hs  Parser.hs  Syntax.hs  Util.hs
Carnap/src/Carnap/Languages/PureSecondOrder/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/SetTheory/: Logic.hs  Parser.hs  Syntax.hs
Carnap/src/Carnap/Languages/Util/: GenericConnectives.hs  GenericConstructors.hs  GenericParsers.hs  LanguageClasses.hs
Carnap/test/: test.hs
(+116 files in other folders)
