name:                Carnap-Client
version:             0.1.0.0
synopsis:            Shared Components for client-server Carnap applications
description:         See Carnap.io/about
license:             GPL-3
author:              Graham Leach-Krouse
maintainer:          gleachkr@gmail.com
copyright:           2017 Graham Leach-Krouse
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Carnap.GHCJS.SharedTypes
                     , Carnap.GHCJS.SharedFunctions

  if impl(ghcjs)
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , parsec
                         , text
                         , bytestring
                         , containers
                         , Carnap

  else 
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , parsec
                         , text
                         , bytestring
                         , containers
                         , Carnap

  default-language:    Haskell2010
