name:                Carnap-GHCJS
version:             0.1.0.0
synopsis:            GHCJS-compiled Components for Carnap Proof Assistant
description:         Please see README.md
license:             GPL-3
author:              Jake Ehrlich, Graham Leach-Krouse
maintainer:          gleachkr@gmail.com
copyright:           2016 Jake Ehrlich, Graham Leach-Krouse
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ProofCheckBox
                     , Carnap.GHCJS.SharedTypes
                     , Carnap.GHCJS.SharedFunctions
                     , Carnap.GHCJS.Action.SyntaxCheck
                     , Carnap.GHCJS.Action.ProofCheck
                     , Carnap.GHCJS.Action.Translate
                     , Carnap.GHCJS.Action.TruthTable
  if impl(ghcjs)
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , ghcjs-base
                         , lens
                         , ghcjs-dom == 0.2.4.0
                         , containers
                         , mtl
                         , parsec
                         , Carnap
                         , tagsoup
                         , text
                         , bytestring
                         , transformers
  else 
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , lens
                         , ghcjs-dom == 0.2.4.0
                         , containers
                         , mtl
                         , parsec
                         , Carnap
                         , tagsoup
                         , text
                         , bytestring
                         , transformers

  default-language:    Haskell2010

executable Syntax-Check
  hs-source-dirs:      Syntax-Check
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable Proof-Check
  hs-source-dirs:      Proof-Check
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable Translate
  hs-source-dirs:      Translate
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable TruthTable
  hs-source-dirs:      TruthTable
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable AllActions
  hs-source-dirs:      AllActions
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

test-suite ghcjs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Carnap
                     , Carnap-GHCJS
                     , ghcjs-dom
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs
