name:                Carnap-GHCJS
version:             0.1.0.0
synopsis:            GHCJS-compiled Components for Carnap Proof Assistant
description:         See Carnap.io/about
license:             GPL-3
author:              Jake Ehrlich, Graham Leach-Krouse
maintainer:          gleachkr@gmail.com
copyright:           2016 Jake Ehrlich, Graham Leach-Krouse
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Carnap.GHCJS.Widget.ProofCheckBox
                     , Carnap.GHCJS.Widget.RenderDeduction
                     , Carnap.GHCJS.Action.SyntaxCheck
                     , Carnap.GHCJS.Action.ProofCheck
                     , Carnap.GHCJS.Action.Translate
                     , Carnap.GHCJS.Action.TruthTable
                     , Carnap.GHCJS.Action.CounterModel
                     , Carnap.GHCJS.Action.QualitativeProblem
                     , Carnap.GHCJS.Action.SequentCheck
                     , Carnap.GHCJS.Action.AcceptJSON
  if impl(ghcjs)
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , ghcjs-base
                         , lens
                         , ghcjs-dom == 0.2.4.0
                         , containers
                         , diagrams-core
                         , diagrams-svg
                         , mtl
                         , parsec
                         , Carnap
                         , Carnap-Client
                         , tagsoup
                         , text
                         , bytestring
                         , hashable
                         , transformers
                         , shakespeare
                         , blaze-html

  else 
      build-depends:       base >= 4.7 && < 5
                         , aeson
                         , lens
                         , ghcjs-dom == 0.2.4.0
                         , containers
                         , diagrams-core
                         , diagrams-svg
                         , mtl
                         , parsec
                         , Carnap
                         , Carnap-Client
                         , tagsoup
                         , text
                         , bytestring
                         , hashable
                         , shakespeare
                         , transformers
                         , blaze-html

  default-language:    Haskell2010

executable Syntax-Check
  hs-source-dirs:      Syntax-Check
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable Proof-Check
  hs-source-dirs:      Proof-Check
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable Translate
  hs-source-dirs:      Translate
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable TruthTable
  hs-source-dirs:      TruthTable
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable AcceptJSON
  hs-source-dirs:      AcceptJSON
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

executable AllActions
  hs-source-dirs:      AllActions
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Carnap-GHCJS
  default-language:    Haskell2010

test-suite ghcjs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Carnap
                     , Carnap-GHCJS
                     , ghcjs-dom
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs
