name:              Carnap-Server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Info
                     Handler.Register
                     Handler.User
                     Handler.Instuctor
                     Handler.Admin
                     Handler.Chapter
                     Handler.Book
                     Handler.Command
                     Handler.Hashed
                     Handler.Rule
                     Handler.Review
                     Handler.Assignment
                     Handler.Document
                     Filter.RenderFormulas
                     Filter.Randomize
                     Filter.Sidenotes
                     Filter.TreeDeduction
                     Filter.Sequent
                     Filter.SynCheckers
                     Filter.ProofCheckers
                     Filter.Translate
                     Filter.TruthTables
                     Filter.CounterModelers
                     Filter.Qualitative
                     Filter.Diagrams
                     Filter.Util
                     Util.Handler
                     Util.Database
                     Util.Data

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
                 , yesod                         >=1.6 && <1.7
                 , yesod-core                    >=1.6 && <1.7
                 , yesod-auth                    >=1.6 && <1.7
                 , yesod-auth-oauth2
                 , yesod-static                  >=1.6 && <1.7
                 , yesod-form                    >=1.6 && <1.7
                 , yesod-markdown                >= 0.12
                 , classy-prelude                >=1.4 && <1.5
                 , classy-prelude-conduit        >=1.4 && <1.5
                 , classy-prelude-yesod          >=1.4 && <1.5
                 , bytestring                    >=0.9 && <0.11
                 , text                          >=0.11 && <2.0
                 , persistent                    >=2.8 && <2.9
                 , persistent-postgresql         >=2.8 && <2.9
                 , persistent-sqlite
                 , persistent-template           >= 2.5        && < 2.9
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.3        && < 2.4
                 , directory                     >= 1.1        && < 1.4
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 1.4
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.4
                 , wai-cors
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , pandoc
                 , pandoc-types
                 , mtl
                 , transformers
                 , blaze-html
                 , lucid
                 , linear
                 , diagrams
                 , diagrams-lib
                 , diagrams-svg
                 , svg-builder
                 , diagrams-builder
                 , filepath
                 , hashable
                 , lens
                 , split
                 , tz
                 , tzdata
                 , Carnap-Client
                 , Carnap
                 , random

executable         Carnap-Server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, Carnap-Server

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , Carnap-Server
                 , yesod-test 
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
