name:                Carnap
version:             0.1.0.0
synopsis:            Libraries for the Carnap Proof Assistant
description:         Please see README.md
license:             GPL-3
license-file:        LICENSE
author:              Jake Ehrlich, Graham Leach-Krouse
maintainer:          gleachkr@gmail.com
copyright:           2016 Jake Ehrlich, Graham Leach-Krouse
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Carnap.Core.Data.AbstractSyntaxDataTypes
                     , Carnap.Core.Examples.ACUI
                     , Carnap.Core.Data.AbstractSyntaxClasses
                     , Carnap.Core.Examples.ToyLanguages
                     , Carnap.Core.Unification.FirstOrder
                     , Carnap.Core.Unification.Unification
                     , Carnap.Core.Unification.ACUI
                     , Carnap.Core.Unification.Huet
                     , Carnap.Core.Unification.Combination
                     , Carnap.Core.ModelChecking.SAT
                     , Carnap.Core.Data.Util
                     , Carnap.Core.Util
                     , Carnap.Languages.Util.GenericConnectives
                     , Carnap.Languages.Util.GenericParsers
                     , Carnap.Languages.Util.LanguageClasses
                     , Carnap.Languages.PurePropositional.Syntax
                     , Carnap.Languages.PurePropositional.Parser
                     , Carnap.Languages.PurePropositional.Util
                     , Carnap.Languages.PurePropositional.Logic
                     , Carnap.Languages.PurePropositional.Logic.Rules
                     , Carnap.Languages.PurePropositional.Logic.KalishAndMontegue
                     , Carnap.Languages.PurePropositional.Logic.BergmannMoorAndNelson
                     , Carnap.Languages.PurePropositional.Logic.Magnus
                     , Carnap.Languages.PurePropositional.Logic.Hardegree
                     , Carnap.Languages.ModalPropositional.Syntax
                     , Carnap.Languages.ModalPropositional.Parser
                     , Carnap.Languages.PureFirstOrder.Syntax
                     , Carnap.Languages.PureFirstOrder.Semantics
                     , Carnap.Languages.PureFirstOrder.Parser
                     , Carnap.Languages.PureFirstOrder.Logic
                     , Carnap.Languages.PureFirstOrder.Logic.Rules
                     , Carnap.Languages.PureFirstOrder.Logic.Magnus
                     , Carnap.Languages.PureFirstOrder.Logic.KalishAndMontegue
                     , Carnap.Languages.PureSecondOrder.Syntax
                     , Carnap.Languages.PureSecondOrder.Parser
                     , Carnap.Languages.PureSecondOrder.Logic
                     , Carnap.Languages.PureSecondOrder.Logic.Rules
                     , Carnap.Languages.PureSecondOrder.Logic.KalishAndMontegue
                     , Carnap.Languages.ClassicalSequent.Syntax
                     , Carnap.Languages.ClassicalSequent.Parser
                     , Carnap.Calculi.NaturalDeduction.Checker
                     , Carnap.Calculi.NaturalDeduction.Parser
                     , Carnap.Calculi.NaturalDeduction.Syntax

  build-depends:       base >= 4.7
                     , lens >= 4.12
                     , mtl >= 2.2.1
                     , containers >= 0.5.6.2
                     , parsec >= 3.1.9
                     , logict
                     , transformers
                     , hashable
  default-language:    Haskell2010

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           test.hs
    other-modules:
    hs-source-dirs:    test
    ghc-options:       -Wall


    build-depends:     base
                     , Carnap
                     , text
                     , shakespeare
    default-language:  Haskell2010
